--- a/sass/layout/_sidebar-right.scss
+++ b/sass/layout/_sidebar-right.scss
@@ -84,6 +84,10 @@
                 + .col {
                     flex: auto;
                 }
+
+                &.bot-indicator {
+                    flex: none;
+                }
             }
 
             .flag-icon__container {
